# SwarmDF

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  swarmdf_environment.yml
data/: README.md
data/sample_datasets/: 20141215_swarmE.h5
examples/: SwarmDF_example_script.py  config.yaml  plot_settings.yaml
src/swarmdf/: SwarmDF_script.py  __init__.py  config.py  pipeline.py  puipui.py  requirements.txt  run_swarmdf.py  testlompeosse.py
src/swarmdf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/swarmdf/cli/: main.py
src/swarmdf/core/: SwarmDF_GUI.py  code_generator.py  conductance.py  data_collect.py  data_manager.py  lompeOSSE_analysis.py  lompe_analysis.py  lompe_input.py  script_generator.py  swarm_orbit_and_grid.py
src/swarmdf/examples/: SwarmDF_demo.ipynb  SwarmDF_example_script.py  SwarmDF_paper.py  config.yaml
src/swarmdf/gui/: SwarmDF_GUI.py  app.py  config.py  gui.py
src/swarmdf/gui/ui/: animation_manager.py  display_helpers.py  input_panels.py  output_panels.py  sidebar_left.py  sidebar_right.py  utils.py  validation_window.py
src/swarmdf/gui/ui/helpers/: animation_manager.py  icons.py  image_display.py  tooltip.py  utils.py
src/swarmdf/gui/ui_helpers/: icons.py  tooltip.py
