
[project]
name = "swarmdf"
version = "0.0.0"
description = "Data Fusion toolbox designed to analyse the local high-latitude ionosphere electrodynamics "
authors = [
    { name = "Margot Decotte, Karl Laundal", email = "margot.decotte@uib.no" }
]
readme = "README.md"
requires-python = ">=3.9"


dependencies = [

]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"